@@ -1,5 +1,6 @@
 --------------------------
 Changes in 1.9 (not yet released)
+- Add IGUIImage::setDrawBackground to allow disabling background drawing even when no texture is set.
 - Add gui event EGET_ELEMENT_REMOVED.
 - Fix: IGUIContextMenu now raises sub-menu when they would otherwise be displayed below bottom-border of root gui element.
 - Prevent initializing/quitting SDL several times when using more than one Irrlicht device.
